# irma

./: .flake8  .gitignore  CHANGELOG.md  README.md  TODO.md  model_evaluation.ipynb  paths.py  pyproject.toml  requirements.txt  server.py  trainer.py
app/: urls.py  views.py
app/static/assets/css/: style.css
app/templates/: index.html
app/tests/: tests_views.py
arc/: asgi.py  settings.py  urls.py  wsgi.py
backend/app/: main.py  paths.py
data/: find_duplicates.py  rename_files.py  split_dataset.py
frontend/static/: style.css
frontend/templates/: index.html
legacy/app/: urls.py
legacy/app/static/assets/css/: style.css
legacy/app/templates/: index.html
legacy/arc/: settings.py  wsgi.py
models/: metrics.ipynb  models.ipynb  yolo.py
modules/: __init__.py  paths.py
scripts/: find_duplicates.py  rename_files.py  split_dataset.py
static/: style.css
